------------------------------------------------------------------------
- Fix: Fixed behavior of calendar when moving to next/previous month when current day is in the range of 29-31.
- Fix: [#334] Improving performance of overall balance calculation and fixing balance target date after month change
- Enhancement: [#328] Swap position for overall and month balance on day view

Who built 1.5.6:
- thamara


1.5.5
------------------------------------------------------------------------
- Enhancement: [#11] Introducing an easy way of sourcing holidays based on user location
- Enhancement: [#164] Overall Balance to replace Month Sum - Now you get an all time balance of your working hours. (Too much overtime huh?!)
- Enhancement: [#299] Introducing new theme: Cadent Star

Who built 1.5.5:
- thamara
- tupaschoal
- araujoarthur0


1.5.4
------------------------------------------------------------------------
- Fix: [#276] Fixed launch of app in debian

Who built 1.5.3:
- thamara


1.5.3 - Skipped
------------------------------------------------------------------------


1.5.2
------------------------------------------------------------------------
- Fix: [#27] Adding day balance on when to leave bar after day is done
- Fix: [#209] Punch time button to only fill one entry (not the entire row)
- Fix: [#210] Count today preference is respected
- Fix: [#211] Adjusted preferences window size to fit the whole content
- Fix: [#213] Count today preference fixed to work as expected.
- Fix: [#215] Fixed exception: isNan is not defined
- Fix: [#229] Count Today in totals no longer causes problem in the month balance
- Fix: [#232] Total bar not updating on day change
- Fix: [#233] Fixes crash when opening the waiver for a day
- Fix: [#239] Punch button is disabled when current day is waived
- Fix: [#240] Waiver using electron dialog instead of js confirm/alert
- Fix: [#244] Waiver opens with filled date when clicking from calendar
- Fix: [#249] Fix loading preferences