@@ -70,6 +70,10 @@
                 <p>Count Today in Totals</p>
                 <label id='count-today' class="switch"><input type="checkbox" name="count-today"><span class="slider round"></span></label>
             </div>
+            <div class="flex-box mb-2">
+                <p>Overall Balance Start Date</p>
+                <label id='overall-balance-start-date'><input type="date" name="overall-balance-start-date"></label>
+            </div>
             <div class="flex-box">
                 <p>Close button should minimize to tray</p>
                 <label id='close-to-tray' class="switch"><input type="checkbox" name="close-to-tray"><span class="slider round"></span></label>
