@@ -34,7 +34,7 @@ $(() => {
         }
     });
 
-    $('input[type="number"]').change(function() {
+    $('input[type="number"], input[type="date"]').change(function() {
         preferences[this.name] = this.value;
         ipcRenderer.send('PREFERENCE_SAVE_DATA_NEEDED', preferences);
     });
@@ -58,7 +58,7 @@ $(() => {
                 input.prop('checked', usersStyles[name]);
             }
             preferences[name] = input.prop('checked');
-        } else if (['text', 'number'].indexOf(input.attr('type')) > -1) {
+        } else if (['text', 'number', 'date'].indexOf(input.attr('type')) > -1) {
             if (name in usersStyles) {
                 input.val(usersStyles[name]);
             }
