@@ -3,6 +3,7 @@
 - Fix: Fixed behavior of calendar when moving to next/previous month when current day is in the range of 29-31.
 - Fix: [#334] Improving performance of overall balance calculation and fixing balance target date after month change
 - Enhancement: [#328] Swap position for overall and month balance on day view
+- Enhancement: [#333] Adding start date for overall balance on preferences
 
 Who built 1.5.6:
 - thamara
